# 42Lyon_BetterMatrixExtension

./: .env.exemple  .gitignore  Cargo.toml  Dockerfile
extension/: manifest.json
extension/src/: claim.js
src/: api.rs  appstate.rs  data.rs  main.rs  routes.rs
