[package]
name = "BetterMatrixServer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "form", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http =  { version = "0.6.8", features = ["cors"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

